# automatic_ip_update

./: pyproject.toml
automatic_ip_update/: automatic_ip_update.py
